[package]
name = "rupnpc"
version = "0.1.3"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }

rupnp = { version = "3", features = ["full_device_spec"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
anyhow = "1"
futures = "0.3"
pin-utils = "0.1"
rt-format = "0.3"
